--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@ Théo Le Goc&#39;s portfolio
                 <div class="row">
                     <div class="col-auto h-100">
                         
-                        <a href="#" class="btn" download
+                        <a href="https://1drv.ms/f/c/909c18bb2dd02227/Emo5lwWcccFGolA0_Tz-GxMB5SETTPuVLgvl5hXgUXXt7Q?e=0w6JGO" class="btn" download
 			  >
                             Resume
                         </a>
